--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
     "@angular/platform-browser": "~8.1.0",
     "@angular/platform-browser-dynamic": "~8.1.0",
     "@angular/router": "~8.1.0",
+    "file-saver": "^2.0.2",
     "hammerjs": "^2.0.8",
+    "loadsh": "0.0.4",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
+    "xlsx": "^0.14.3",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
