--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "file-saver": "^2.0.2",
     "hammerjs": "^2.0.8",
     "loadsh": "0.0.4",
+    "ngx-device-detector": "^1.4.5",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
     "xlsx": "^0.14.3",
